# back/src/routes/auth.routes.js
@@ -1,0 +1,10 @@
+import { Router } from "express";
+
+import authController from "../controllers/auth.controller.js";
+import asyncHandler from "../middlewares/async-handler.middleware.js";
+
+const router = Router();
+
+router.post("/login", asyncHandler(authController.login));
+
+export default router;
